# games101-assignment

./: README.md
A0/: CMakeLists.txt  main.cpp
A1/source/: CMakeLists.txt  Triangle.hpp  main.cpp  rasterizer.hpp
